2014-03-12  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.16.1 released.

	* Facebook login via Javascript was broken if `auth_type` was not
  	set to `reauthenticate`, fixed.

2014-03-10  Raymond Penners  <raymond.penners@intenct.nl>

        * Support for hooking up a callback when `FB.init()` is ready
	(`allauth.facebook.onInit`)

	* Version 0.16.0 released.

	* Nariman Gharib contributed a Persian translation, thanks!

2014-02-09  Raymond Penners  <raymond.penners@intenct.nl>

	* The custom signup form `save` has been deprecated in favour of a
	`def signup(request, user)` method.

2014-02-08  Raymond Penners  <raymond.penners@intenct.nl>

	* Facebook reauthentication now uses an `auth_nonce`.

2014-02-07  Raymond Penners  <raymond.penners@intenct.nl>

	* Added a new option `ACCOUNT_LOGIN_ON_EMAIL_CONFIRMATION`, to
	indicate whether or not e-mail confirmation is to automatically
	log in.

2014-02-04  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added Bitbucket provider.

	* Jack Shedd contributed Tumblr support, thanks!

	* Romanos Tsouroplis contributed Foursquare support, thanks!

2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>

	* "excessivedemon" contributed Flickr support, thanks!

2013-12-26  Raymond Penners  <raymond.penners@intenct.nl>

	* Luis Diego García contributed Amazon and Paypal support, thanks!

2013-12-04  Raymond Penners  <raymond.penners@intenct.nl>

	* Stuart Ross contributed LinkedIn OAuth 2.0 support, thanks!

2013-12-01  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.15.0 released.

	* socialaccount: Added `is_auto_signup_allowed` to social account
	adapter.

2013-11-27  Raymond Penners  <raymond.penners@intenct.nl>

	* facebook: Added a new setting: VERIFIED_EMAIL.

	* socialaccount: a collision on e-mail address when you sign up
	using a third party social account is now more clearly explained:
	"An account already exists with this e-mail address.  Please sign