@@ -1,3 +1,7 @@
+2014-04-29  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Added Xing provider.
+
 2014-03-12  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.16.1 released.
